RESOLVED FIXED42249
Pixel test failure in moving-shadow-on-path.html and moving-shadow-on-container.html
https://bugs.webkit.org/show_bug.cgi?id=42249
Summary Pixel test failure in moving-shadow-on-path.html and moving-shadow-on-contain...
Attachments
Patch (59.72 KB, patch)
2010-07-15 00:30 PDT, Nikolas Zimmermann
abarth: review+
Nikolas Zimmermann
Comment 1 2010-07-15 00:30:57 PDT
Created attachment 61615 [details] Patch Thanks for the report, I indeed forgot to check fast/repaint tests in pixel test mode.
Adam Barth
Comment 2 2010-07-15 00:32:12 PDT
Comment on attachment 61615 [details] Patch Ok. This is more of a rubber stamp...
Nikolas Zimmermann
Comment 3 2010-07-15 01:11:56 PDT
Landed in r63413 plus an updated pixel test result in r63414, that I forgot to revert as well.
Note You need to log in before you can comment on or make changes to this bug.