2010-07-15  Nikolas Zimmermann  <nzimmermann@rim.com>

Reviewed by Adam Barth.

        Pixel test failure in moving-shadow-on-path.html and moving-shadow-on-container.html
        https://bugs.webkit.org/show_bug.cgi?id=42249

        Partly revert <http://trac.webkit.org/changeset/63307>. The RenderSVGRoot change caused a pixel test regression in two fast/repaint tests.

        * rendering/RenderSVGRoot.cpp:
        (WebCore::RenderSVGRoot::layout): Include selfNeedsLayout() check in LayoutStateRepainter argument.

2010-07-15  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Adam Barth.

        Pixel test failure in moving-shadow-on-path.html and moving-shadow-on-container.html
        https://bugs.webkit.org/show_bug.cgi?id=42249

        Update fast/repaint/moving-shadow-on-path.html result, which shows a slightly smaller repaint rect.

        * platform/mac/fast/repaint/moving-shadow-on-path-expected.checksum:
        * platform/mac/fast/repaint/moving-shadow-on-path-expected.png:


Canonical link: https://commits.webkit.org/54261@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63413 268f45cc-cd09-0410-ab3c-d52691b4dbfc